--- a/index.html
+++ b/index.html
@@ -4,20 +4,19 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>VOID LAUNCH — memecoin crematorium 2026</title>
-<meta name="description" content="Create. Pump. Burn. Repeat. No backend. No mercy."/>
 
 <script src="https://unpkg.com/@solana/web3.js@1.95.3/lib/index.iife.min.js"></script>
 <script src="https://unpkg.com/@solana/spl-token@0.4.8/lib/index.iife.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/buffer@6.0.3/index.min.js"></script>
 
 <style>
-  :root{--bg:#000;--accent:#ff00aa;--text:#f0f;--dim:#666;--glass:rgba(10,0,20,0.7)}
+  :root{--bg:#000;--accent:#ff00aa;--text:#f0f;--dim:#666;--glass:rgba(10,0,20,0.8)}
   *{margin:0;padding:0;box-sizing:border-box}
   body{
     min-height:100vh;
     background:radial-gradient(circle at 30% 20%,#1a0033,#000);
     color:var(--text);
-    font-family:system-ui,sans-serif;
+    font-family: 'Courier New', monospace;
     overflow-x:hidden;
   }
   .frame{
@@ -26,69 +25,35 @@
     animation:pulse 8s infinite alternate;
   }
   @keyframes pulse{0%,100%{opacity:0.12}50%{opacity:0.35}}
-  header{
-    text-align:center;padding:3rem 1rem;
-    background:linear-gradient(to bottom,rgba(255,0,170,0.1),transparent);
-  }
+  header{text-align:center;padding:3rem 1rem;}
   h1{
-    font-size:3.8rem;
+    font-size:3.5rem;
     background:linear-gradient(90deg,var(--accent),#00ffff,#ff00aa);
-    -webkit-background-clip:text;
-    background-clip:text;
-    color:transparent;
-    text-shadow:0 0 30px rgba(255,0,170,0.6);
+    -webkit-background-clip:text;background-clip:text;color:transparent;
+    text-shadow:0 0 20px rgba(255,0,170,0.5);
   }
   .container{
-    max-width:640px;margin:0 auto;padding:2rem;
-    background:var(--glass);
-    backdrop-filter:blur(16px);
-    border-radius:24px;
-    border:1px solid rgba(255,0,170,0.3);
-    box-shadow:0 0 60px rgba(255,0,170,0.2);
+    max-width:550px;margin:0 auto;padding:2rem;
+    background:var(--glass);backdrop-filter:blur(20px);
+    border-radius:12px;border:1px solid rgba(255,0,170,0.3);
   }
-  .status{
-    text-align:center;font-size:1.4rem;font-weight:900;margin:1rem 0;
-    letter-spacing:2px;text-transform:uppercase;
+  .status{text-align:center;font-size:0.9rem;margin-bottom:2rem;color:#00ffff;text-transform:uppercase;}
+  form{display:grid;gap:1rem;}
+  input, select, textarea {
+    padding:12px;background:rgba(0,0,0,0.5);border:1px solid var(--accent);
+    color:#fff;border-radius:4px;outline:none;
   }
-  form{
-    display:grid;gap:1.2rem;margin:2rem 0;
-  }
-  input,textarea{
-    padding:1rem;
-    border-radius:12px;
-    border:1px solid var(--accent);
-    background:rgba(0,0,0,0.6);
-    color:#fff;
-    font-size:1.1rem;
-  }
-  input::placeholder{opacity:0.5;color:var(--accent)}
   button{
-    padding:1.2rem;
-    font-size:1.3rem;font-weight:900;
-    border:none;border-radius:16px;
-    background:linear-gradient(45deg,#ff00aa,#00ffff);
-    color:#000;
-    cursor:pointer;transition:all .3s;
-    text-transform:uppercase;letter-spacing:2px;
+    padding:15px;font-weight:900;background:var(--accent);color:#000;
+    border:none;cursor:pointer;text-transform:uppercase;transition:0.3s;
   }
-  button:hover{transform:scale(1.04);box-shadow:0 0 40px #ff00aa}
-  button:disabled{opacity:0.4;transform:none;cursor:not-allowed}
-  .preview{
-    margin:2rem 0;padding:1.5rem;
-    background:rgba(255,0,170,0.1);
-    border-radius:16px;
-    text-align:center;
-    min-height:120px;
-    border:1px dashed var(--accent);
+  button:hover:not(:disabled){filter:brightness(1.2);box-shadow:0 0 20px var(--accent);}
+  button:disabled{opacity:0.3;cursor:not-allowed;}
+  .success-box {
+    margin-top:20px;padding:15px;background:rgba(0,255,170,0.1);
+    border:1px solid #00ffaa;font-size:0.8rem;word-break:break-all;
   }
-  .success{
-    margin-top:2rem;padding:1.5rem;
-    background:rgba(0,255,170,0.15);
-    border:2px solid #00ffaa;
-    border-radius:16px;
-    word-break:break-all;
-    font-family:monospace;
-  }
+  a{color:#00ffff;text-decoration:none;}
 </style>
 </head>
 <body>
@@ -97,190 +62,147 @@
 
 <header>
   <h1>VOID LAUNCH</h1>
-  <p style="margin-top:0.5rem;opacity:0.7;font-size:1.2rem">
-    Create → Mint → Revoke → Disappear
-  </p>
+  <p>NO BACKEND. NO MERCY. 2026 EDITION.</p>
 </header>
 
 <div class="container">
-  <div class="status" id="status">DISCONNECTED • FEED THE VOID</div>
-
-  <div style="text-align:center;margin:1.5rem 0;">
-    <button id="connect">AWAKEN WALLET</button>
+  <div class="status" id="status">PHANTOM NOT CONNECTED</div>
+  
+  <div style="text-align:center;margin-bottom:20px;">
+    <button id="connectBtn">INITIALIZE WALLET</button>
   </div>
 
-  <form id="launch">
-    <input id="name" placeholder="Token Name (the lie)" required/>
-    <input id="symbol" placeholder="Symbol (max 8 chars)" maxlength="8" required/>
-    <input id="supply" type="number" min="1" placeholder="Total Supply (the illusion)" required/>
+  <form id="launchForm">
+    <input id="name" placeholder="Token Name" required/>
+    <input id="symbol" placeholder="Symbol" maxlength="10" required/>
+    <input id="supply" type="number" placeholder="Supply (e.g. 1000000000)" required/>
     <select id="decimals">
-      <option value="6">6 decimals (normie)</option>
-      <option value="9" selected>9 decimals (degen classic)</option>
-      <option value="0">0 decimals (pure chaos)</option>
+      <option value="9">9 Decimals (Standard)</option>
+      <option value="6">6 Decimals (USDC-style)</option>
+      <option value="0">0 Decimals (Chaos)</option>
     </select>
-    <textarea id="desc" rows="3" placeholder="Description... (optional funeral note)"></textarea>
-    
-    <button id="create" disabled type="submit">BIRTH THE ABOMINATION</button>
+    <button id="createBtn" type="submit" disabled>BIRTH THE ABOMINATION</button>
   </form>
 
-  <div class="preview" id="preview">
-    Token will be born fair-launched • Mint & Freeze revoked • No going back
-  </div>
-
-  <div id="result" class="success" style="display:none"></div>
+  <div id="result" class="success-box" style="display:none"></div>
 </div>
 
 <script>
-// ════════════════════════════════════════════════════════════════
-// VOID LAUNCH — single-file mainnet memecoin generator — 2026 edition
-// ═════════════════════════════════════════════════════════════════
+// Fix for Buffer in browser
+window.Buffer = buffer.Buffer;
 
-const { Connection, PublicKey, Keypair, Transaction, SystemProgram } = solanaWeb3;
-const { TOKEN_PROGRAM_ID, ASSOCIATED_TOKEN_PROGRAM_ID } = splToken;
+const { 
+  Connection, PublicKey, Keypair, Transaction, SystemProgram, ComputeBudgetProgram 
+} = solanaWeb3;
+const { 
+  TOKEN_PROGRAM_ID, ASSOCIATED_TOKEN_PROGRAM_ID, createInitializeMintInstruction, 
+  getAssociatedTokenAddress, createAssociatedTokenAccountInstruction, 
+  createMintToInstruction, createSetAuthorityInstruction, MINT_SIZE 
+} = splToken;
 
-const connection = new Connection("https://api.mainnet-beta.solana.com", "confirmed");
-const MINT_SIZE = 82;
+const statusEl = document.getElementById("status");
+const connectBtn = document.getElementById("connectBtn");
+const createBtn = document.getElementById("createBtn");
+const resultEl = document.getElementById("result");
 
 let wallet = null;
-let provider = null;
+const connection = new Connection("https://api.mainnet-beta.solana.com", "confirmed");
 
-const status = document.getElementById("status");
-const connectBtn = document.getElementById("connect");
-const createBtn = document.getElementById("create");
-const form = document.getElementById("launch");
-const resultDiv = document.getElementById("result");
-
+// 1. Connect Wallet
 async function connect() {
-  if (!window.solana || !window.solana.isPhantom) {
-    alert("Phantom not detected. Install it or perish.");
-    return;
-  }
-  provider = window.solana;
   try {
-    await provider.connect();
-    wallet = new PublicKey(provider.publicKey.toString());
-    status.textContent = `CONNECTED • \( {wallet.toBase58().slice(0,6)}... \){wallet.toBase58().slice(-6)}`;
+    const resp = await window.solana.connect();
+    wallet = resp.publicKey;
+    statusEl.textContent = `READY: ${wallet.toString().slice(0,8)}...`;
     createBtn.disabled = false;
-    connectBtn.textContent = "RECONNECT";
-  } catch(e) {
-    status.textContent = "REJECTION • VOID DENIED ACCESS";
+    connectBtn.style.display = "none";
+  } catch (err) {
+    statusEl.textContent = "CONNECTION REFUSED";
   }
 }
 
 connectBtn.onclick = connect;
 
-async function createToken(e) {
+// 2. Launch Logic
+document.getElementById("launchForm").onsubmit = async (e) => {
   e.preventDefault();
-  if (!wallet || !provider) return alert("No wallet. No birth.");
-
-  const name = document.getElementById("name").value.trim() || "VOID";
-  const symbol = document.getElementById("symbol").value.trim() || "NULL";
-  const supplyStr = document.getElementById("supply").value;
-  const decimals = Number(document.getElementById("decimals").value);
-
-  if (!supplyStr || isNaN(Number(supplyStr))) return alert("Supply is required");
-  const totalSupply = BigInt(supplyStr);
-  if (totalSupply <= 0n) return alert("Supply must be positive. Even void has standards.");
+  
+  const name = document.getElementById("name").value;
+  const symbol = document.getElementById("symbol").value;
+  const supply = document.getElementById("supply").value;
+  const decimals = parseInt(document.getElementById("decimals").value);
 
   createBtn.disabled = true;
-  createBtn.textContent = "BIRTHING... (30–90s)";
+  createBtn.textContent = "TRANSMITTING TO VOID...";
 
   try {
-    const mint = Keypair.generate();
-    const rent = await connection.getMinimumBalanceForRentExemption(MINT_SIZE);
+    const mintKeypair = Keypair.generate();
+    const lamports = await connection.getMinimumBalanceForRentExemption(MINT_SIZE);
 
+    // Create Transaction
     const tx = new Transaction();
 
+    // A. Add Priority Fees (Crucial for 2026 congestion)
+    tx.add(ComputeBudgetProgram.setComputeUnitPrice({ microLamports: 50000 }));
+
+    // B. Create Account & Initialize Mint
     tx.add(
       SystemProgram.createAccount({
         fromPubkey: wallet,
-        newAccountPubkey: mint.publicKey,
-        lamports: rent,
+        newAccountPubkey: mintKeypair.publicKey,
         space: MINT_SIZE,
-        programId: TOKEN_PROGRAM_ID
-      })
+        lamports,
+        programId: TOKEN_PROGRAM_ID,
+      }),
+      createInitializeMintInstruction(mintKeypair.publicKey, decimals, wallet, wallet)
     );
 
+    // C. Setup User ATA
+    const ata = await getAssociatedTokenAddress(mintKeypair.publicKey, wallet);
     tx.add(
-      splToken.createInitializeMintInstruction(
-        mint.publicKey,
-        decimals,
-        wallet,
-        wallet,
-        TOKEN_PROGRAM_ID
-      )
+      createAssociatedTokenAccountInstruction(wallet, ata, wallet, mintKeypair.publicKey)
     );
 
-    const ata = await splToken.getAssociatedTokenAddress(
-      mint.publicKey, wallet, false,
-      TOKEN_PROGRAM_ID, ASSOCIATED_TOKEN_PROGRAM_ID
-    );
-
-    const ataInfo = await connection.getAccountInfo(ata);
-    if (!ataInfo) {
-      tx.add(
-        splToken.createAssociatedTokenAccountInstruction(
-          wallet, ata, wallet, mint.publicKey,
-          TOKEN_PROGRAM_ID, ASSOCIATED_TOKEN_PROGRAM_ID
-        )
-      );
-    }
-
-    const mintAmount = totalSupply * (10n ** BigInt(decimals));
+    // D. Mint the Supply
+    const fullAmount = BigInt(supply) * BigInt(Math.pow(10, decimals));
     tx.add(
-      splToken.createMintToInstruction(
-        mint.publicKey, ata, wallet, mintAmount,
-        [], TOKEN_PROGRAM_ID
-      )
+      createMintToInstruction(mintKeypair.publicKey, ata, wallet, fullAmount)
     );
 
-    // Revoke both authorities (true fair launch)
+    // E. Revoke Mint & Freeze Authority (The "Fair Launch" Seal)
     tx.add(
-      splToken.createSetAuthorityInstruction(
-        mint.publicKey, wallet, 0, null, TOKEN_PROGRAM_ID
-      )
-    );
-    tx.add(
-      splToken.createSetAuthorityInstruction(
-        mint.publicKey, wallet, 1, null, TOKEN_PROGRAM_ID
-      )
+      createSetAuthorityInstruction(mintKeypair.publicKey, wallet, 0, null), // Mint
+      createSetAuthorityInstruction(mintKeypair.publicKey, wallet, 1, null)  // Freeze
     );
 
+    // Finalize Tx
     tx.recentBlockhash = (await connection.getLatestBlockhash()).blockhash;
     tx.feePayer = wallet;
+    tx.partialSign(mintKeypair);
 
-    tx.partialSign(mint);
+    const signed = await window.solana.signTransaction(tx);
+    const signature = await connection.sendRawTransaction(signed.serialize());
+    
+    statusEl.textContent = "CONFIRMING ON-CHAIN...";
+    await connection.confirmTransaction(signature);
 
-    const signed = await provider.signTransaction(tx);
-    const sig = await connection.sendRawTransaction(signed.serialize(), {
-      skipPreflight: true,
-      maxRetries: 5
-    });
-
-    await connection.confirmTransaction(sig, "confirmed");
-
-    const mintStr = mint.publicKey.toBase58();
-    resultDiv.innerHTML = `
-      ABOMINATION BORN<br><br>
-      Mint: <a href="https://solscan.io/token/\( {mintStr}" target="_blank"> \){mintStr}</a><br>
-      Signature: <a href="https://solscan.io/tx/\( {sig}" target="_blank"> \){sig}</a><br><br>
-      Authorities revoked. Liquidity? Your problem now.
+    // Display Success
+    resultEl.style.display = "block";
+    resultEl.innerHTML = `
+      <strong>VOID ACCEPTS YOUR OFFERING</strong><br><br>
+      MINT: <a href="https://solscan.io/token/${mintKeypair.publicKey.toBase58()}" target="_blank">${mintKeypair.publicKey.toBase58()}</a><br><br>
+      TX: <a href="https://solscan.io/tx/${signature}" target="_blank">VIEW ON SOLSCAN</a><br><br>
+      <em>Authorities revoked. Token is immutable.</em>
     `;
-    resultDiv.style.display = "block";
 
-  } catch(e) {
-    console.error(e);
-    alert("BIRTH FAILED:\n" + (e.message || e).slice(0,200));
+  } catch (err) {
+    console.error(err);
+    alert("VOID ERROR: " + err.message);
   } finally {
     createBtn.disabled = false;
     createBtn.textContent = "BIRTH THE ABOMINATION";
   }
-}
-
-form.onsubmit = createToken;
-
-// Auto-reconnect if already approved
-if (window.solana?.isConnected) connect();
+};
 </script>
 </body>
 </html>
